--- a/static/style.css
+++ b/static/style.css
@@ -1429,6 +1429,7 @@ span.preferences-card-subscribe-text{
 
 .preferences-invite-left{
     width: 100%;
+    height: 15px;
     font-size: 15px;
     color: #D3D3D3;
     display: inline-block;
@@ -1578,7 +1579,6 @@ span.preferences-card-subscribe-text{
     width: 24px;
     height: 24px;
     border-radius: 2px;
-    background: #F00;
 
 }
 
