--- a/static/style.css
+++ b/static/style.css
@@ -1480,7 +1480,7 @@ span.preferences-card-subscribe-text{
 
 .preferences-invite-invited:active{
 
-    box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.2 ) inset;
+    box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.2 ) inset, 0 0 0 1px rgba( 37, 37, 37, 0.5 );
 
     background-image: -moz-linear-gradient( top, #3F3F3F, #4D4D4D ); 
     background-image: -webkit-linear-gradient( top, #3F3F3F, #4D4D4D );
