Preferences - No hover or click when dragging

--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,12 @@
     
 }
 
+.wz-win.wz-win-dragging .preferences-top li:hover{
+    
+    border-bottom: 2px solid transparent;
+    
+}
+
 .preferences-top li.active:hover{
     
     color: #FFFFFF;
