--- a/static/social.css
+++ b/static/social.css
@@ -37,6 +37,7 @@
     background: #F00;
     float: left;
     margin-top: 10px;
+    display: none;
 
 }
 
@@ -46,7 +47,7 @@
     color: #FFF;
     float: left;
     margin-top: 19px;
-    margin-left: 10px;
+    /*margin-left: 10px;*/
 
 }
 
