Preferences [Implementation] Added Rosemary wallpaper support

--- a/static/style.css
+++ b/static/style.css
@@ -1400,6 +1400,10 @@ span.preferences-card-subscribe-text{
     background-position: -128px -240px;
 }
 
+.wallpaper-18{
+    background-position: -256px -240px;
+}
+
 /* CUSTOMIZE ZONE FINISH */
 
 /* INVITE ZONE START */
