--- a/static/style.css
+++ b/static/style.css
@@ -149,41 +149,18 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  background-color: #ccd3d5;
   -webkit-box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
   -moz-box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
   box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
   border: solid 1px #2c3238;
-  background-image: -webkit-linear-gradient(bottom, #404951, #47525b);
-  background-image: -o-linear-gradient(bottom, #404951, #47525b);
-  background-image: linear-gradient(to top, #404951, #47525b);
   text-align: center;
+  transition: all 0.2s ease;
 
 
 }
 
 .preferences-button span{
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-}
-
-.preferences-button:hover{
-
-    background-image: -moz-linear-gradient( bottom, #4C4C4C, #737373 );
-    background-image: -webkit-linear-gradient( bottom, #4C4C4C, #737373 );
-    background-image: -o-linear-gradient( bottom, #4C4C4C, #737373 );
-    background-image: linear-gradient( to top, #4C4C4C, #737373 );
-
-}
-
-.preferences-button:active{
-
-    box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.2 );
-
-    background-image: -moz-linear-gradient( bottom, #4D4D4D, #3F3F3F );
-    background-image: -webkit-linear-gradient( bottom, #4D4D4D, #3F3F3F );
-    background-image: -o-linear-gradient( bottom, #4D4D4D, #3F3F3F );
-    background-image: linear-gradient( to top, #4D4D4D, #3F3F3F );
-
 }
 
 .preferences-button.active{
@@ -1424,22 +1401,19 @@ span.preferences-card-subscribe-text{
 
     width: 126px;
     height: 78px;
-    background-color: #3a3a3a;
-	-webkit-box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
+    -webkit-box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
 	-moz-box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
 	box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
 	border: solid 1px #2c3238;
-    background-image: -webkit-linear-gradient(bottom, #404951, #47525b);
-	background-image: -moz-linear-gradient(bottom, #404951, #47525b);
-	background-image: -o-linear-gradient(bottom, #404951, #47525b);
-	background-image: -ms-linear-gradient(bottom, #404951, #47525b);
-	background-image: linear-gradient(to top, #404951, #47525b);
-  -webkit-border-radius: 3px;
--moz-border-radius: 3px;
-border-radius: 3px;
     position: relative;
     display: inline-block;
     margin: 6px;
+    background-color: #4c4c4c;
+    background-image: -webkit-linear-gradient(bottom, #404951, #47525b);
+    background-image: -moz-linear-gradient(bottom, #404951, #47525b);
+    background-image: -o-linear-gradient(bottom, #404951, #47525b);
+    background-image: -ms-linear-gradient(bottom, #404951, #47525b);
+    background-image: linear-gradient(to top, #404951, #47525b);
 
 }
 
@@ -1448,7 +1422,7 @@ border-radius: 3px;
     width: 49px;
     height: 35px;
     position: absolute;
-    background: #2c3238;
+    background: #d2dce2;
     top: 10px;
     left: 39px;
 
@@ -1483,15 +1457,15 @@ border-radius: 3px;
     width: 100%;
     text-align: center;
     font-size: 16px;
-    color: #9D9D9D;
+    color: #d2dce2;
     position: absolute;
-    left: 0;
+    left: 13px;
     bottom: 8px;
 
 }
 
 .preferences-wallpaper-upload:hover{
-    background: #424B55;
+    background: #515d67;
 
 }
 
@@ -1504,17 +1478,6 @@ border-radius: 3px;
   position: absolute;
   top: 10px;
   left: 39px;
-}
-
-.preferences-wallpaper-upload:hover .preferences-upload-background{
-  background: #9d9d9D;
-}
-
-
-
-
-.preferences-wallpaper-upload:hover span{
-    color: #9d9d9D;
 }
 
 .preferences-wallpaper-image{
@@ -1850,18 +1813,9 @@ border-radius: 3px;
 }
 
 .preferences-bottom-content.backup button{
-  width: auto;
+  width: 278px;
   height: 65px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  background-color: #e85c5c;
-background-image: -webkit-linear-gradient(bottom, #ef5251, #f75a59);
-background-image: -moz-linear-gradient(bottom, #ef5251, #f75a59);
-background-image: -o-linear-gradient(bottom, #ef5251, #f75a59);
-background-image: -ms-linear-gradient(bottom, #ef5251, #f75a59);
-background-image: linear-gradient(to top, #ef5251, #f75a59);
-    padding: 0 36px;
+  transition: all 0.2s ease;
 
 }
 
@@ -1925,5 +1879,3 @@ background-image: linear-gradient(to top, #ef5251, #f75a59);
 }
 
 /* ABOUT ZONE FINISH */
-
-/* CONFIG BUTTON */
