--- a/static/style.css
+++ b/static/style.css
@@ -154,45 +154,13 @@
   box-shadow: 0 2px 1px rgba(0,0,0,.05), inset 0 2px rgba(255,255,255,.03);
   border: solid 1px #2c3238;
   text-align: center;
+}
+.preferences-button *{
   transition: all 0.2s ease;
-
-
 }
 
 .preferences-button span{
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-}
-
-.preferences-button.active{
-
-    border: 1px solid #60B25E;
-    box-shadow: inset 0 1px rgba( 255, 255, 255, 0.3 );
-
-    background-image: -moz-linear-gradient( bottom, #60B25E, #60B25E );
-    background-image: -webkit-linear-gradient( bottom, #60B25E, #60B25E );
-    background-image: -o-linear-gradient( bottom, #60B25E, #60B25E );
-    background-image: linear-gradient( to top, #60B25E, #60B25E );
-
-}
-
-.preferences-button.active:hover{
-
-    background-image: -moz-linear-gradient( bottom, #60B25E, #60B25E );
-    background-image: -webkit-linear-gradient( bottom, #60B25E, #60B25E );
-    background-image: -o-linear-gradient( bottom, #60B25E, #60B25E );
-    background-image: linear-gradient( to top, #60B25E, #60B25E );
-
-}
-
-.preferences-button.active:active{
-
-    box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.2 );
-
-    background-image: -moz-linear-gradient( bottom, #609125, #448A1C );
-    background-image: -webkit-linear-gradient( bottom, #609125, #448A1C );
-    background-image: -o-linear-gradient( bottom, #609125, #448A1C );
-    background-image: linear-gradient( to top, #609125, #448A1C );
-
 }
 
 .preferences-button.warning{
@@ -285,15 +253,7 @@
     height: 40px;
     background: #545F65;
     border: 1px solid #444;
-    display: inline-block;
-    -webkit-border-radius: 4px;
-	  -moz-border-radius: 4px;
-	  border-radius: 4px;
-	  border: solid 1px rgba(0,0,0,.2);
-    vertical-align: top;
-
 }
-
 
 
 .preferences-bottom-container{
@@ -335,25 +295,6 @@
   text-align: right;
 
 }
-.preferences-bottom-input.top{
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-
-    /*margin-top: 25px;*/
-}
-
-.preferences-bottom-input.middle{
-    border-radius: 0;
-    border-top: none;
-
-}
-
-.preferences-bottom-input.bottom{
-    border-top: none;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    /*margin-bottom: 25px;*/
-}
 
 .preferences-bottom-input i:first-child{
 
@@ -361,8 +302,8 @@
     height: 18px;
     float: left;
     margin: 10px;
-    background: url('https://static.inevio.com/app/374/icons.png') no-repeat;
-    background-size: 90px 18px;
+    background: url('@static/confirm.png') no-repeat;
+    background-size: contain;
 
 }
 
@@ -489,13 +430,9 @@
 
 .preferences-bottom-checkbox figure{
 
-    width: 7px;
-    height: 7px;
-    padding: 4px;
-    float: left;
+    width: 13px;
+    height: 13px;
     margin-right: 5px;
-    border-radius: 3px;
-    background: #2c3238;
 
 }
 
@@ -880,7 +817,9 @@ span.preferences-card-subscribe-text{
     display: inline-block;
     text-align: center;
     margin-top: 15px;
-
+}
+.preferences-account-buttons *{
+  transition: all 0.2s ease;
 }
 
 .preferences-button.account{
@@ -920,11 +859,13 @@ span.preferences-card-subscribe-text{
   margin-right: auto;
 }
 .preferences-bottom-input.password-current i:first-child{
-    background-position: -36px 0;
+    background: url('@static/pass.png') no-repeat;
+    background-size: contain;
 }
 
 .preferences-bottom-input.password-new i:first-child{
-    background-position: -54px 0;
+    background: url('@static/repeat-pass.png') no-repeat;
+    background-size: contain;
 }
 
 /* PASSWORD ZONE FINISH */
