--- a/static/style.css
+++ b/static/style.css
@@ -2,12 +2,6 @@
   font-family: 'Lato';
 }
 
-.wz-app .wz-view .wz-app-374 .wz-app-374-view .wz-app-374-view-main{
-  border-radius: 6px;
-  background: #2c3238;
-
-}
-
 .wz-view-menu-group{
 
     /*padding: 14px 20px 9px;*/
@@ -32,9 +26,8 @@
 
 .preferences-top{
 
-    width: 748px;
+    width: 754px;
     float: left;
-    border-radius: 3px 3px 0px 0px;
 	  border: solid 1px #2c3238;
     border-bottom: none;
     /*box-shadow: 0 2px 4px rgba( 0, 0, 0, 0.15 ), inset 0 1px rgba( 255, 255, 255, 0.1 );*/
@@ -128,16 +121,16 @@
 
 .wz-view-minimize i{
   margin-top: 8px;
-  background: url('https://static.inevio.com/app/374/minimize.png') no-repeat;
+  background: url('@static/minimize.png') no-repeat;
   background-size: contain;
 }
 .wz-view-maximize i{
-  background: url('https://static.inevio.com/app/374/expand.png') no-repeat;
+  background: url('@static/expand.png') no-repeat;
   background-size: contain;
   margin-top: 0px;
 }
 .wz-view-close i{
-  background: url('https://static.inevio.com/app/374/close.png') no-repeat;
+  background: url('@static/close.png') no-repeat;
   background-size: contain;
   margin-top: 0px;
 }
@@ -157,42 +150,11 @@
 }
 .preferences-button *{
   transition: all 0.2s ease;
+
 }
 
 .preferences-button span{
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-}
-
-.preferences-button.warning{
-
-    border: 1px solid #2F2F2F;
-    box-shadow: 0 1px rgba( 255, 255, 255, 0.3 ) inset;
-
-    background-image: -moz-linear-gradient( bottom, #B93F39, #DA605B );
-    background-image: -webkit-linear-gradient( bottom, #B93F39, #DA605B );
-    background-image: -o-linear-gradient( bottom, #B93F39, #DA605B );
-    background-image: linear-gradient( to top, #B93F39, #DA605B );
-
-}
-
-.preferences-button.warning:hover{
-
-    background-image: -moz-linear-gradient( bottom, #E34840, #E86F6A );
-    background-image: -webkit-linear-gradient( bottom, #E34840, #E86F6A );
-    background-image: -o-linear-gradient( bottom, #E34840, #E86F6A );
-    background-image: linear-gradient( to top, #E34840, #E86F6A );
-
-}
-
-.preferences-button.warning:active{
-
-    box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.2 );
-
-    background-image: -moz-linear-gradient( top, #A43733, #C85551 );
-    background-image: -webkit-linear-gradient( top, #A43733, #C85551 );
-    background-image: -o-linear-gradient( top, #A43733, #C85551 );
-    background-image: linear-gradient( to bottom, #A43733, #C85551 );
-
 }
 
 .preferences-button.unactive{
@@ -202,6 +164,7 @@
     box-shadow: inset 0 1px #464646;
 
 }
+
 
 .preferences-button.unactive span{
 
@@ -438,8 +401,8 @@
 
 .preferences-bottom-checkbox figure i{
 
-    width: 7px;
-    height: 7px;
+    width: 13px;
+    height: 13px;
     background: url('@static/check.png') no-repeat;
     background-size: 7px 7px;
     display: none;
@@ -1218,11 +1181,11 @@ span.preferences-card-subscribe-text{
 
 }
 .spanishFlag{
-  background: url('https://static.inevio.com/app/374/Spanish.png') no-repeat;
+  background: url('@static/Spanish.png') no-repeat;
   background-size: 292px 62px;
 }
 .englishFlag{
-  background: url('https://static.inevio.com/app/374/english.png') no-repeat;
+  background: url('@static/english.png') no-repeat;
   background-size: 98px 62px;
 }
 
@@ -1426,7 +1389,7 @@ span.preferences-card-subscribe-text{
     width: 128px;
     height: 80px;
     display: inline-block;
-    background: url('https://static.inevio.com/app/374/wallpapers.jpg') no-repeat;
+    background: url('@static/wallpapers.jpg') no-repeat;
     background-size: 672px 336px;
     margin: 6px;
     transition: all 0.2s ease;
